experiment notes fixes

--- a/01-experiment.ipynb
+++ b/01-experiment.ipynb
@@ -279,9 +279,7 @@
     "id": "DgkySQNYYWKi"
    },
    "source": [
-    "# `class_weight` = 40% \n",
-    "\n",
-    "Positive class with label = 1 - 40%"
+    "# `class_weight` = 40% "
    ]
   },
   {
@@ -337,9 +335,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Assess the difference between curves\n",
+    "## Assessment the difference between curves\n",
     "\n",
-    "**Let's compare ROC and PR curves at `n_objects` equal to 1e+5 at the points where AUC ROC has a minimum and maximum value.**"
+    "**Let's compare the ROC and PR curves at `n_objects` equal to 1e+5 at the `seeds` corresponding to the minimum and maximum AUC ROC values.**"
    ]
   },
   {
@@ -381,9 +379,7 @@
     "id": "3cKoFcUNeLvq"
    },
    "source": [
-    "# `class_weight` = 0.05%\n",
-    "\n",
-    "Positive class with label = 1 - 0.05%"
+    "# `class_weight` = 0.05%"
    ]
   },
   {
@@ -439,9 +435,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Assess the difference between curves\n",
+    "## Assessment the difference between curves\n",
     "\n",
-    "**Let's compare ROC and PR curves at `n_objects` equal to 1e+5 at points where AUC ROC has a minimum and maximum value.**"
+    "**Let's compare the ROC and PR curves at `n_objects` equal to 1e+5 at the `seeds` corresponding to the minimum and maximum AUC ROC values.**"
    ]
   },
   {
@@ -481,7 +477,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Let's compare ROC and PR curves at `n_objects` equal to 5e+7 at points where AUC ROC has a minimum and maximum value.**"
+    "**Let's do the same thing, but this time for `n_objects` equal to 5e+7.**"
    ]
   },
   {
