--- a/02-experiment.ipynb
+++ b/02-experiment.ipynb
@@ -312,9 +312,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Assesment the difference between curves\n",
+    "### Assessment the difference between curves\n",
     "\n",
-    "**Let's compare ROC and PR curves at `class_weight` equal to 0.0005 at points where AUC ROC has a minimum and maximum value.**"
+    "**Let's compare the ROC and PR curves at `class_weight` equal to 0.0005 at the `seeds` corresponding to the minimum and maximum AUC ROC values.**"
    ]
   },
   {
@@ -403,9 +403,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Assesment the difference between curves\n",
+    "### Assessment the difference between curves\n",
     "\n",
-    "**Let's compare ROC and PR curves at `class_weight` equal to 0.4 at points where AUC ROC has a minimum and maximum value.**"
+    "**Let's compare the ROC and PR curves at `class_weight` equal to 0.4 at the `seeds` corresponding to the minimum and maximum AUC ROC values.**"
    ]
   },
   {
@@ -444,7 +444,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Let's compare ROC and PR curves at `class_weight` equal to 0.0005 at points where AUC ROC has a minimum and maximum value.**"
+    "**Let's do the same thing, but this time for `class_weight` equal to 0.0005.**"
    ]
   },
   {
