--- a/03-experiment.ipynb
+++ b/03-experiment.ipynb
@@ -334,7 +334,7 @@
    "source": [
     "### `loc` = 6\n",
     "\n",
-    "**Let's compare the ROC and PR curves at loc equal to 6 at the `seeds` corresponding to the minimum and maximum AUC ROC values.**"
+    "**Let's compare the ROC and PR curves at `loc` equal to 6 at the `seeds` corresponding to the minimum and maximum AUC ROC values.**"
    ]
   },
   {
@@ -464,7 +464,7 @@
    "source": [
     "### `loc` = 6\n",
     "\n",
-    "**Let's compare the ROC and PR curves at loc equal to 6 at the `seeds` corresponding to the minimum and maximum AUC ROC values.**"
+    "**Let's compare the ROC and PR curves at `loc` equal to 6 at the `seeds` corresponding to the minimum and maximum AUC ROC values.**"
    ]
   },
   {
@@ -594,7 +594,7 @@
    "source": [
     "### `loc` = 6\n",
     "\n",
-    "**Let's compare the ROC and PR curves at loc equal to 6 at the `seeds` corresponding to the minimum and maximum AUC ROC values.**"
+    "**Let's compare the ROC and PR curves at `loc` equal to 6 at the `seeds` corresponding to the minimum and maximum AUC ROC values.**"
    ]
   },
   {
@@ -725,7 +725,7 @@
    "source": [
     "### `loc` = 6\n",
     "\n",
-    "**Let's compare the ROC and PR curves at loc equal to 6 at the `seeds` corresponding to the minimum and maximum AUC ROC values.**"
+    "**Let's compare the ROC and PR curves at `loc` equal to 6 at the `seeds` corresponding to the minimum and maximum AUC ROC values.**"
    ]
   },
   {
