preparation for publication

--- a/01-experiment.ipynb
+++ b/01-experiment.ipynb
@@ -6,9 +6,7 @@
    "source": [
     "**Experiment #1**\n",
     "\n",
-    "**The central question for this experiment is: what if the class balance remains constant, but the number of objects in the sample varies? How does this influence the AUCs?**\n",
-    "\n",
-    "**Let's vary the `number_of_objects` in a range from 1E+5 to 5E+7, with `class_weight` set to 40% and 0.05%.**"
+    "**The central question of this experiment is: how will changes in the sample size affect the AUCs, while the class balance remains constant? To investigate this, we will vary the `number_of_objects` in a range from 1E+5 to 5E+7, with `class_weight` set at 40% and 0.05%.**"
    ]
   },
   {
@@ -16,8 +14,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-19T07:06:45.174408Z",
-     "start_time": "2023-06-19T07:06:43.859714Z"
+     "end_time": "2023-09-04T11:17:31.966790Z",
+     "start_time": "2023-09-04T11:17:31.257474Z"
     },
     "id": "8J8_LB5oA7bA"
    },
@@ -43,8 +41,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-19T07:06:45.884712Z",
-     "start_time": "2023-06-19T07:06:45.178651Z"
+     "end_time": "2023-09-04T11:17:31.976208Z",
+     "start_time": "2023-09-04T11:17:31.971338Z"
     },
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -84,13 +82,13 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-19T07:06:45.977586Z",
-     "start_time": "2023-06-19T07:06:45.887262Z"
+     "end_time": "2023-09-04T11:17:31.983848Z",
+     "start_time": "2023-09-04T11:17:31.979415Z"
     }
    },
    "outputs": [],
    "source": [
-    "from utils import get_distributions, get_metrics, seeds, class_weights, number_of_objects, get_curves, plot_curves"
+    "from utils import get_sample, get_metrics, seeds, class_weights, number_of_objects, get_curves, plot_curves"
    ]
   },
   {
@@ -98,8 +96,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-19T07:06:45.989179Z",
-     "start_time": "2023-06-19T07:06:45.981441Z"
+     "end_time": "2023-09-04T11:17:32.001247Z",
+     "start_time": "2023-09-04T11:17:31.991052Z"
     }
    },
    "outputs": [
@@ -142,8 +140,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-19T07:06:45.996192Z",
-     "start_time": "2023-06-19T07:06:45.991407Z"
+     "end_time": "2023-09-04T11:17:32.012386Z",
+     "start_time": "2023-09-04T11:17:32.005628Z"
     }
    },
    "outputs": [
@@ -167,8 +165,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-19T07:06:46.004067Z",
-     "start_time": "2023-06-19T07:06:45.998799Z"
+     "end_time": "2023-09-04T11:17:32.023056Z",
+     "start_time": "2023-09-04T11:17:32.014994Z"
     },
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -209,8 +207,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-19T07:06:46.013913Z",
-     "start_time": "2023-06-19T07:06:46.006470Z"
+     "end_time": "2023-09-04T11:17:32.036862Z",
+     "start_time": "2023-09-04T11:17:32.026455Z"
     }
    },
    "outputs": [],
@@ -230,7 +228,7 @@
     "        for seed in seeds:\n",
     "            print('-', end='')\n",
     "            roc, pr = get_metrics(\n",
-    "                get_distributions(n_objects, class_weight, seed=seed)\n",
+    "                get_sample(n_objects, class_weight, seed=seed)\n",
     "            )\n",
     "            roc_scores.append(roc)\n",
     "            pr_scores.append(pr)\n",
@@ -253,8 +251,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-19T07:06:46.023374Z",
-     "start_time": "2023-06-19T07:06:46.016435Z"
+     "end_time": "2023-09-04T11:17:32.048179Z",
+     "start_time": "2023-09-04T11:17:32.040289Z"
     }
    },
    "outputs": [],
@@ -287,8 +285,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-19T09:24:20.255173Z",
-     "start_time": "2023-06-19T07:06:46.025904Z"
+     "end_time": "2023-09-04T13:44:00.351005Z",
+     "start_time": "2023-09-04T11:17:32.053271Z"
     }
    },
    "outputs": [
@@ -335,9 +333,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Assessment the difference between curves\n",
+    "## Assessment the difference between the curves\n",
     "\n",
-    "**Let's compare the ROC and PR curves at `n_objects` equal to 1e+5 at the `seeds` corresponding to the minimum and maximum AUC ROC values.**"
+    "**Let's compare the ROC and PR curves when `n_objects` is set to 1E+5 and `class_weight` is set to 40% at the `seeds` corresponding to the minimum and maximum AUC ROC values.**"
    ]
   },
   {
@@ -345,8 +343,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-19T09:24:25.356511Z",
-     "start_time": "2023-06-19T09:24:20.259523Z"
+     "end_time": "2023-09-04T13:44:05.257837Z",
+     "start_time": "2023-09-04T13:44:00.356720Z"
     }
    },
    "outputs": [
@@ -387,8 +385,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-19T11:42:12.598442Z",
-     "start_time": "2023-06-19T09:24:25.359247Z"
+     "end_time": "2023-09-04T16:23:06.940990Z",
+     "start_time": "2023-09-04T13:44:05.260712Z"
     }
    },
    "outputs": [
@@ -435,9 +433,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Assessment the difference between curves\n",
+    "## Assessment the difference between the curves\n",
     "\n",
-    "**Let's compare the ROC and PR curves at `n_objects` equal to 1e+5 at the `seeds` corresponding to the minimum and maximum AUC ROC values.**"
+    "**Let's compare the ROC and PR curves when `n_objects` is set to 1E+5 and `class_weight` is set to 0.05% at the `seeds` corresponding to the minimum and maximum AUC ROC values.**"
    ]
   },
   {
@@ -445,8 +443,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-19T11:42:18.431708Z",
-     "start_time": "2023-06-19T11:42:12.602279Z"
+     "end_time": "2023-09-04T16:23:11.746106Z",
+     "start_time": "2023-09-04T16:23:06.945298Z"
     }
    },
    "outputs": [
@@ -477,7 +475,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Let's do the same thing, but this time for `n_objects` equal to 5e+7.**"
+    "**Let's do a similar comparison for `n_objects` equal to 5E+7.**"
    ]
   },
   {
@@ -485,8 +483,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-19T12:26:43.521224Z",
-     "start_time": "2023-06-19T11:42:18.434675Z"
+     "end_time": "2023-09-04T17:08:25.388883Z",
+     "start_time": "2023-09-04T16:23:11.748518Z"
     }
    },
    "outputs": [
@@ -552,7 +550,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "284.2px"
+    "width": "375.2px"
    },
    "toc_section_display": true,
    "toc_window_display": true
