--- a/02-experiment.ipynb
+++ b/02-experiment.ipynb
@@ -6,9 +6,7 @@
    "source": [
     "**Experiment #2**\n",
     "\n",
-    "**The question to explore is: what if the number of objects remains the same, but the class balance varies? How will this affect the AUCs?**\n",
-    "\n",
-    "**Let's vary `class_weight` from 40% to 0.05%.**"
+    "**The question to explore is: how will changes in class balance affect AUCs when the sample size remains the same? To investigate this, we will vary `class_weight` from 40% to 0.05%, with `n_objects` set at 1E+5 and 5E+7.**"
    ]
   },
   {
@@ -16,8 +14,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-19T13:15:49.161728Z",
-     "start_time": "2023-06-19T13:15:47.988752Z"
+     "end_time": "2023-09-06T07:23:17.311249Z",
+     "start_time": "2023-09-06T07:23:15.801309Z"
     },
     "id": "8J8_LB5oA7bA"
    },
@@ -43,8 +41,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-19T13:15:49.853109Z",
-     "start_time": "2023-06-19T13:15:49.164868Z"
+     "end_time": "2023-09-06T07:23:17.320125Z",
+     "start_time": "2023-09-06T07:23:17.314957Z"
     },
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -84,13 +82,13 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-19T13:15:49.942611Z",
-     "start_time": "2023-06-19T13:15:49.855467Z"
+     "end_time": "2023-09-06T07:23:17.327950Z",
+     "start_time": "2023-09-06T07:23:17.323995Z"
     }
    },
    "outputs": [],
    "source": [
-    "from utils import get_distributions, get_metrics, seeds, class_weights, number_of_objects, get_curves, plot_curves"
+    "from utils import get_sample, get_metrics, seeds, class_weights, number_of_objects, get_curves, plot_curves"
    ]
   },
   {
@@ -98,8 +96,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-19T13:15:49.954434Z",
-     "start_time": "2023-06-19T13:15:49.947009Z"
+     "end_time": "2023-09-06T07:23:17.345118Z",
+     "start_time": "2023-09-06T07:23:17.332862Z"
     }
    },
    "outputs": [
@@ -142,8 +140,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-19T13:15:49.961166Z",
-     "start_time": "2023-06-19T13:15:49.956808Z"
+     "end_time": "2023-09-06T07:23:17.353797Z",
+     "start_time": "2023-09-06T07:23:17.348266Z"
     }
    },
    "outputs": [
@@ -167,8 +165,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-19T13:15:49.968139Z",
-     "start_time": "2023-06-19T13:15:49.963550Z"
+     "end_time": "2023-09-06T07:23:17.366208Z",
+     "start_time": "2023-09-06T07:23:17.356873Z"
     }
    },
    "outputs": [
@@ -194,8 +192,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-19T13:15:49.978598Z",
-     "start_time": "2023-06-19T13:15:49.970607Z"
+     "end_time": "2023-09-06T07:23:17.379611Z",
+     "start_time": "2023-09-06T07:23:17.369147Z"
     }
    },
    "outputs": [],
@@ -215,7 +213,7 @@
     "        for seed in seeds:\n",
     "            print('-', end='')\n",
     "            roc, pr = get_metrics(\n",
-    "                get_distributions(n_objects, class_weight, seed)\n",
+    "                get_sample(n_objects, class_weight, seed)\n",
     "            )\n",
     "            roc_scores.append(roc)\n",
     "            pr_scores.append(pr)\n",
@@ -238,8 +236,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-19T13:15:49.988599Z",
-     "start_time": "2023-06-19T13:15:49.981419Z"
+     "end_time": "2023-09-06T07:23:17.394385Z",
+     "start_time": "2023-09-06T07:23:17.383720Z"
     }
    },
    "outputs": [],
@@ -264,7 +262,7 @@
     "id": "UQe1-wfqu5CU"
    },
    "source": [
-    "## `number_of_objects` = 50,000,000"
+    "# `number_of_objects` = 50,000,000"
    ]
   },
   {
@@ -272,8 +270,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-19T17:02:57.072770Z",
-     "start_time": "2023-06-19T13:15:49.991245Z"
+     "end_time": "2023-09-06T11:35:42.523316Z",
+     "start_time": "2023-09-06T07:23:17.399070Z"
     }
    },
    "outputs": [
@@ -312,9 +310,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Assessment the difference between curves\n",
+    "## Assessment the difference between the curves\n",
     "\n",
-    "**Let's compare the ROC and PR curves at `class_weight` equal to 0.0005 at the `seeds` corresponding to the minimum and maximum AUC ROC values.**"
+    "**Let's compare the ROC and PR curves when `n_objects` is set to 5E+7 and `class_weight` is set to 0.05% at the `seeds` corresponding to the minimum and maximum AUC ROC values.**"
    ]
   },
   {
@@ -322,8 +320,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-19T17:48:02.180020Z",
-     "start_time": "2023-06-19T17:02:57.077702Z"
+     "end_time": "2023-09-06T12:25:45.936864Z",
+     "start_time": "2023-09-06T11:35:42.530653Z"
     }
    },
    "outputs": [
@@ -355,7 +353,7 @@
     "id": "PmwcmOXxu5dl"
    },
    "source": [
-    "## `number_of_objects` = 100,000"
+    "# `number_of_objects` = 100,000"
    ]
   },
   {
@@ -363,8 +361,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-19T17:48:25.745890Z",
-     "start_time": "2023-06-19T17:48:02.182171Z"
+     "end_time": "2023-09-06T12:26:09.672278Z",
+     "start_time": "2023-09-06T12:25:45.944536Z"
     }
    },
    "outputs": [
@@ -403,9 +401,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Assessment the difference between curves\n",
+    "## Assessment the difference between the curves\n",
     "\n",
-    "**Let's compare the ROC and PR curves at `class_weight` equal to 0.4 at the `seeds` corresponding to the minimum and maximum AUC ROC values.**"
+    "**Let's compare the ROC and PR curves when `n_objects` is set to 1E+5 and `class_weight` is set to 40% at the `seeds` corresponding to the minimum and maximum AUC ROC values.**"
    ]
   },
   {
@@ -413,8 +411,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-19T17:48:30.564725Z",
-     "start_time": "2023-06-19T17:48:25.748298Z"
+     "end_time": "2023-09-06T12:26:14.262647Z",
+     "start_time": "2023-09-06T12:26:09.675898Z"
     }
    },
    "outputs": [
@@ -444,7 +442,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Let's do the same thing, but this time for `class_weight` equal to 0.0005.**"
+    "**Let's do a similar comparison for `class_weight` equal to 0.0005.**"
    ]
   },
   {
@@ -452,8 +450,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-19T17:48:34.410376Z",
-     "start_time": "2023-06-19T17:48:30.567120Z"
+     "end_time": "2023-09-06T12:26:18.600847Z",
+     "start_time": "2023-09-06T12:26:14.265092Z"
     }
    },
    "outputs": [
