--- a/03-experiment.ipynb
+++ b/03-experiment.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "**Experiment #3**\n",
     "\n",
-    "**The open question is: what if the `number_of_objects` and `class_weight` remain constant, but the distance between the normal distributions varies?**"
+    "**The open question is: how will the changes in the distance between normal distributions affect the AUCs when the sample size and class balance remain constant? To investigate this, we will vary the `loc` parameter in `get_sample()` in a range from 6 to 14, with `class_weight` set at 40% and 0.05% and `number_of_objects` set at 1E+5 and 5E+7.**"
    ]
   },
   {
@@ -14,8 +14,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-07-28T15:58:16.288687Z",
-     "start_time": "2023-07-28T15:58:15.054230Z"
+     "end_time": "2023-09-09T09:45:05.529140Z",
+     "start_time": "2023-09-09T09:45:04.225077Z"
     },
     "id": "8J8_LB5oA7bA"
    },
@@ -41,8 +41,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-07-28T15:58:18.029144Z",
-     "start_time": "2023-07-28T15:58:17.343641Z"
+     "end_time": "2023-09-09T09:45:06.395054Z",
+     "start_time": "2023-09-09T09:45:05.532170Z"
     },
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -82,8 +82,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-07-28T15:58:18.712484Z",
-     "start_time": "2023-07-28T15:58:18.703656Z"
+     "end_time": "2023-09-09T09:45:06.408456Z",
+     "start_time": "2023-09-09T09:45:06.398710Z"
     }
    },
    "outputs": [
@@ -108,13 +108,13 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-07-28T15:58:19.962075Z",
-     "start_time": "2023-07-28T15:58:19.876859Z"
+     "end_time": "2023-09-09T09:45:06.531670Z",
+     "start_time": "2023-09-09T09:45:06.412380Z"
     }
    },
    "outputs": [],
    "source": [
-    "from utils import get_distributions, get_metrics, seeds, class_weights, number_of_objects, get_curves, plot_curves"
+    "from utils import get_sample, get_metrics, seeds, class_weights, number_of_objects, get_curves, plot_curves"
    ]
   },
   {
@@ -122,8 +122,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-07-28T15:58:20.899759Z",
-     "start_time": "2023-07-28T15:58:20.894933Z"
+     "end_time": "2023-09-09T09:45:06.538993Z",
+     "start_time": "2023-09-09T09:45:06.533982Z"
     }
    },
    "outputs": [
@@ -166,8 +166,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-07-28T15:58:21.809191Z",
-     "start_time": "2023-07-28T15:58:21.804877Z"
+     "end_time": "2023-09-09T09:45:06.546036Z",
+     "start_time": "2023-09-09T09:45:06.541741Z"
     }
    },
    "outputs": [
@@ -191,8 +191,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-07-28T15:58:22.556206Z",
-     "start_time": "2023-07-28T15:58:22.551259Z"
+     "end_time": "2023-09-09T09:45:06.554648Z",
+     "start_time": "2023-09-09T09:45:06.549366Z"
     }
    },
    "outputs": [
@@ -218,8 +218,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-07-28T15:58:23.943061Z",
-     "start_time": "2023-07-28T15:58:23.932985Z"
+     "end_time": "2023-09-09T09:45:06.563488Z",
+     "start_time": "2023-09-09T09:45:06.556716Z"
     }
    },
    "outputs": [],
@@ -239,7 +239,7 @@
     "        for seed in seeds:\n",
     "            print('-', end='')\n",
     "            roc, pr = get_metrics(\n",
-    "                get_distributions(n_objects, class_weight, seed=seed, loc=loc)\n",
+    "                get_sample(n_objects, class_weight, seed=seed, loc=loc)\n",
     "            )\n",
     "            roc_scores.append(roc)\n",
     "            pr_scores.append(pr)\n",
@@ -262,8 +262,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-07-28T15:58:25.253499Z",
-     "start_time": "2023-07-28T15:58:25.248152Z"
+     "end_time": "2023-09-09T09:45:06.570792Z",
+     "start_time": "2023-09-09T09:45:06.565302Z"
     }
    },
    "outputs": [],
@@ -292,8 +292,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-20T08:04:29.210421Z",
-     "start_time": "2023-06-20T08:04:10.390347Z"
+     "end_time": "2023-09-09T09:45:25.764587Z",
+     "start_time": "2023-09-09T09:45:06.578212Z"
     }
    },
    "outputs": [
@@ -334,7 +334,7 @@
    "source": [
     "### `loc` = 6\n",
     "\n",
-    "**Let's compare the ROC and PR curves at `loc` equal to 6 at the `seeds` corresponding to the minimum and maximum AUC ROC values.**"
+    "**Let's compare the ROC and PR curves when `loc` is set to 6 at the `seeds` corresponding to the minimum and maximum AUC ROC values.**"
    ]
   },
   {
@@ -342,8 +342,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-20T08:04:34.279446Z",
-     "start_time": "2023-06-20T08:04:29.213036Z"
+     "end_time": "2023-09-09T09:45:30.571257Z",
+     "start_time": "2023-09-09T09:45:25.766237Z"
     }
    },
    "outputs": [
@@ -376,7 +376,7 @@
    "source": [
     "### `loc` = 14\n",
     "\n",
-    "**Let's do the same thing, but this time for `loc` equal to 14.**"
+    "**Let's do a similar comparison for `loc` equal to 14.**"
    ]
   },
   {
@@ -384,8 +384,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-20T08:04:38.075960Z",
-     "start_time": "2023-06-20T08:04:34.281654Z"
+     "end_time": "2023-09-09T09:45:34.519504Z",
+     "start_time": "2023-09-09T09:45:30.573663Z"
     }
    },
    "outputs": [
@@ -423,8 +423,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-20T11:50:59.997001Z",
-     "start_time": "2023-06-20T08:04:38.078460Z"
+     "end_time": "2023-09-09T13:28:13.990498Z",
+     "start_time": "2023-09-09T09:45:34.522536Z"
     }
    },
    "outputs": [
@@ -464,7 +464,7 @@
    "source": [
     "### `loc` = 6\n",
     "\n",
-    "**Let's compare the ROC and PR curves at `loc` equal to 6 at the `seeds` corresponding to the minimum and maximum AUC ROC values.**"
+    "**Let's compare the ROC and PR curves when `loc` is set to 6 at the `seeds` corresponding to the minimum and maximum AUC ROC values.**"
    ]
   },
   {
@@ -472,8 +472,8 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-20T12:35:02.920942Z",
-     "start_time": "2023-06-20T11:51:00.001250Z"
+     "end_time": "2023-09-09T14:13:56.601594Z",
+     "start_time": "2023-09-09T13:28:13.992699Z"
     }
    },
    "outputs": [
@@ -505,7 +505,7 @@
    "source": [
     "### `loc` = 14\n",
     "\n",
-    "**Let's do the same thing, but this time for `loc` equal to 14.**"
+    "**Let's do a similar comparison for `loc` equal to 14.**"
    ]
   },
   {
@@ -513,8 +513,8 @@
    "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-20T13:18:33.266227Z",
-     "start_time": "2023-06-20T12:35:02.925043Z"
+     "end_time": "2023-09-09T14:58:46.413320Z",
+     "start_time": "2023-09-09T14:13:56.603743Z"
     }
    },
    "outputs": [
@@ -552,8 +552,8 @@
    "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-20T13:18:52.258139Z",
-     "start_time": "2023-06-20T13:18:33.271768Z"
+     "end_time": "2023-09-09T14:59:06.425366Z",
+     "start_time": "2023-09-09T14:58:46.417389Z"
     }
    },
    "outputs": [
@@ -594,7 +594,7 @@
    "source": [
     "### `loc` = 6\n",
     "\n",
-    "**Let's compare the ROC and PR curves at `loc` equal to 6 at the `seeds` corresponding to the minimum and maximum AUC ROC values.**"
+    "**Let's compare the ROC and PR curves when `loc` is set to 6 at the `seeds` corresponding to the minimum and maximum AUC ROC values.**"
    ]
   },
   {
@@ -602,8 +602,8 @@
    "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-20T13:18:57.151310Z",
-     "start_time": "2023-06-20T13:18:52.261023Z"
+     "end_time": "2023-09-09T14:59:11.371347Z",
+     "start_time": "2023-09-09T14:59:06.427791Z"
     }
    },
    "outputs": [
@@ -636,7 +636,7 @@
    "source": [
     "### `loc` = 14\n",
     "\n",
-    "**Let's do the same thing, but this time for `loc` equal to 14.**"
+    "**Let's do a similar comparison for `loc` equal to 14.**"
    ]
   },
   {
@@ -644,8 +644,8 @@
    "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-20T13:19:01.940909Z",
-     "start_time": "2023-06-20T13:18:57.153611Z"
+     "end_time": "2023-09-09T14:59:16.120211Z",
+     "start_time": "2023-09-09T14:59:11.373908Z"
     }
    },
    "outputs": [
@@ -684,8 +684,8 @@
    "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-20T17:09:21.991740Z",
-     "start_time": "2023-06-20T13:19:01.943397Z"
+     "end_time": "2023-09-09T19:02:32.253980Z",
+     "start_time": "2023-09-09T14:59:16.122374Z"
     }
    },
    "outputs": [
@@ -725,16 +725,16 @@
    "source": [
     "### `loc` = 6\n",
     "\n",
-    "**Let's compare the ROC and PR curves at `loc` equal to 6 at the `seeds` corresponding to the minimum and maximum AUC ROC values.**"
+    "**Let's compare the ROC and PR curves when `loc` is set to 6 at the `seeds` corresponding to the minimum and maximum AUC ROC values.**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-07-26T18:18:42.885809Z",
-     "start_time": "2023-07-26T17:29:00.924164Z"
+     "end_time": "2023-09-09T19:45:20.288491Z",
+     "start_time": "2023-09-09T19:02:32.256826Z"
     }
    },
    "outputs": [
@@ -766,16 +766,16 @@
    "source": [
     "### `loc` = 10\n",
     "\n",
-    "**Let's do the same thing, but this time for `loc` equal to 10.**"
+    "**Let's do a similar comparison for `loc` equal to 10.**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-07-26T19:06:05.835660Z",
-     "start_time": "2023-07-26T18:18:42.888618Z"
+     "end_time": "2023-09-09T20:28:02.739777Z",
+     "start_time": "2023-09-09T19:45:20.290473Z"
     }
    },
    "outputs": [
@@ -807,16 +807,16 @@
    "source": [
     "### `loc` = 14\n",
     "\n",
-    "**Let's do the same thing, but this time for `loc` equal to 14.**"
+    "**Let's do a similar comparison for `loc` equal to 14.**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-07-28T16:40:24.444399Z",
-     "start_time": "2023-07-28T15:58:40.319642Z"
+     "end_time": "2023-09-09T21:11:03.512217Z",
+     "start_time": "2023-09-09T20:28:02.742237Z"
     }
    },
    "outputs": [
