--- a/04-experiment.ipynb
+++ b/04-experiment.ipynb
@@ -22,9 +22,7 @@
    "source": [
     "**Experiment #4**\n",
     "\n",
-    "**The open question: does AUC ROC the suitable evaluation metric during model training with early stopping in the case of class imbalance, or it can be replaced by AUC PR?**\n",
-    "\n",
-    "**Let's use CatBoost and XGBoost with their corresponding metrics to check this hypothesis.**"
+    "**Open question: is AUC ROC a suitable metric for early stopping in gradient-boosted decision tree libraries, or can it be replaced by AUC PR? Let's use an unbalanced dataset with CatBoost and XGBoost to test this hypothesis.**"
    ]
   },
   {
@@ -32,8 +30,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-20T08:11:07.432923Z",
-     "start_time": "2023-06-20T08:11:05.260764Z"
+     "end_time": "2023-09-06T12:32:50.868741Z",
+     "start_time": "2023-09-06T12:32:48.579266Z"
     },
     "id": "8J8_LB5oA7bA"
    },
@@ -63,8 +61,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-20T08:11:07.639384Z",
-     "start_time": "2023-06-20T08:11:07.436365Z"
+     "end_time": "2023-09-06T12:32:51.251554Z",
+     "start_time": "2023-09-06T12:32:50.871568Z"
     },
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -107,116 +105,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-06-20T08:11:07.646440Z",
-     "start_time": "2023-06-20T08:11:07.641948Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from utils import get_distributions, get_metrics, seeds, class_weights, number_of_objects"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-06-20T08:11:07.658875Z",
-     "start_time": "2023-06-20T08:11:07.650759Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[978,\n",
-       " 672,\n",
-       " 821,\n",
-       " 445,\n",
-       " 488,\n",
-       " 449,\n",
-       " 753,\n",
-       " 962,\n",
-       " 874,\n",
-       " 287,\n",
-       " 257,\n",
-       " 598,\n",
-       " 100,\n",
-       " 136,\n",
-       " 305,\n",
-       " 376,\n",
-       " 548,\n",
-       " 229,\n",
-       " 265,\n",
-       " 425]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "seeds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-06-20T08:11:07.668523Z",
-     "start_time": "2023-06-20T08:11:07.661879Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0.4, 0.3, 0.2, 0.1, 0.05, 0.01, 0.005, 0.001, 0.0005]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "class_weights"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-06-20T08:11:07.679291Z",
-     "start_time": "2023-06-20T08:11:07.672771Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([  100000.,   200000.,   400000.,   800000.,  1000000.,  2000000.,\n",
-       "        4000000.,  8000000., 10000000., 15000000., 20000000., 25000000.,\n",
-       "       30000000., 35000000., 40000000., 45000000., 50000000.])"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "number_of_objects"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -224,11 +112,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-20T08:11:16.153320Z",
-     "start_time": "2023-06-20T08:11:07.682944Z"
+     "end_time": "2023-09-06T12:33:00.319052Z",
+     "start_time": "2023-09-06T12:32:51.254921Z"
     },
     "id": "lmXLYGjJhQoo"
    },
@@ -248,11 +136,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-20T08:11:16.348287Z",
-     "start_time": "2023-06-20T08:11:16.155826Z"
+     "end_time": "2023-09-06T12:33:00.488409Z",
+     "start_time": "2023-09-06T12:33:00.323676Z"
     },
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -336,7 +224,7 @@
        "4 -1.109207      0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,11 +236,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-20T08:11:16.639652Z",
-     "start_time": "2023-06-20T08:11:16.351105Z"
+     "end_time": "2023-09-06T12:33:00.762521Z",
+     "start_time": "2023-09-06T12:33:00.491217Z"
     },
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -374,12 +262,13 @@
     {
      "data": {
       "text/plain": [
+       "label\n",
        "0    99.94501\n",
        "1     0.05499\n",
-       "Name: label, dtype: float64"
+       "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,11 +279,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-20T08:11:45.037087Z",
-     "start_time": "2023-06-20T08:11:16.647122Z"
+     "end_time": "2023-09-06T12:33:31.059537Z",
+     "start_time": "2023-09-06T12:33:00.765380Z"
     },
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -419,7 +308,7 @@
        "0.7838850716549493"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,11 +319,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-20T08:12:09.133443Z",
-     "start_time": "2023-06-20T08:11:45.039826Z"
+     "end_time": "2023-09-06T12:33:55.381831Z",
+     "start_time": "2023-09-06T12:33:31.062459Z"
     },
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -459,7 +348,7 @@
        "0.0032325575659300767"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,11 +359,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-20T08:12:13.198190Z",
-     "start_time": "2023-06-20T08:12:09.136052Z"
+     "end_time": "2023-09-06T12:33:59.922885Z",
+     "start_time": "2023-09-06T12:33:55.385028Z"
     },
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -526,11 +415,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-20T08:12:13.202313Z",
-     "start_time": "2023-06-20T08:12:13.199566Z"
+     "end_time": "2023-09-06T12:33:59.928833Z",
+     "start_time": "2023-09-06T12:33:59.925892Z"
     }
    },
    "outputs": [],
@@ -549,11 +438,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-20T08:12:13.209684Z",
-     "start_time": "2023-06-20T08:12:13.204439Z"
+     "end_time": "2023-09-06T12:33:59.940722Z",
+     "start_time": "2023-09-06T12:33:59.935238Z"
     }
    },
    "outputs": [],
@@ -565,11 +454,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-20T08:12:13.217004Z",
-     "start_time": "2023-06-20T08:12:13.212057Z"
+     "end_time": "2023-09-06T12:33:59.949558Z",
+     "start_time": "2023-09-06T12:33:59.943069Z"
     }
    },
    "outputs": [
@@ -579,7 +468,7 @@
        "F_onewayResult(statistic=1.014580771784754, pvalue=0.3690072282846025)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,11 +480,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-20T08:12:13.224318Z",
-     "start_time": "2023-06-20T08:12:13.219443Z"
+     "end_time": "2023-09-06T12:33:59.958456Z",
+     "start_time": "2023-09-06T12:33:59.952079Z"
     }
    },
    "outputs": [
@@ -605,7 +494,7 @@
        "F_onewayResult(statistic=1.7455611452846287, pvalue=0.18374756329975184)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,11 +506,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-20T08:12:13.232050Z",
-     "start_time": "2023-06-20T08:12:13.226911Z"
+     "end_time": "2023-09-06T12:33:59.968530Z",
+     "start_time": "2023-09-06T12:33:59.961934Z"
     }
    },
    "outputs": [],
@@ -646,11 +535,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-20T08:12:14.487064Z",
-     "start_time": "2023-06-20T08:12:13.234494Z"
+     "end_time": "2023-09-06T12:34:01.417774Z",
+     "start_time": "2023-09-06T12:33:59.971011Z"
     }
    },
    "outputs": [
@@ -681,11 +570,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-20T08:12:14.495575Z",
-     "start_time": "2023-06-20T08:12:14.489623Z"
+     "end_time": "2023-09-06T12:34:01.428792Z",
+     "start_time": "2023-09-06T12:34:01.421985Z"
     }
    },
    "outputs": [],
@@ -697,11 +586,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-20T08:12:14.501860Z",
-     "start_time": "2023-06-20T08:12:14.497872Z"
+     "end_time": "2023-09-06T12:34:01.444219Z",
+     "start_time": "2023-09-06T12:34:01.432844Z"
     }
    },
    "outputs": [
@@ -711,7 +600,7 @@
        "F_onewayResult(statistic=0.011057689844627492, pvalue=0.9890053426831835)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -723,11 +612,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-20T08:12:14.507585Z",
-     "start_time": "2023-06-20T08:12:14.503619Z"
+     "end_time": "2023-09-06T12:34:01.463638Z",
+     "start_time": "2023-09-06T12:34:01.450232Z"
     }
    },
    "outputs": [
@@ -737,7 +626,7 @@
        "F_onewayResult(statistic=0.3356178839536168, pvalue=0.716299335506857)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -749,11 +638,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-20T08:12:14.514546Z",
-     "start_time": "2023-06-20T08:12:14.509731Z"
+     "end_time": "2023-09-06T12:34:01.480144Z",
+     "start_time": "2023-09-06T12:34:01.469556Z"
     }
    },
    "outputs": [],
@@ -778,11 +667,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-20T08:12:14.836179Z",
-     "start_time": "2023-06-20T08:12:14.516979Z"
+     "end_time": "2023-09-06T12:34:02.007928Z",
+     "start_time": "2023-09-06T12:34:01.484276Z"
     }
    },
    "outputs": [
